Not freed memory blocks in Menu Search #93523

Closed
opened 2021-11-30 19:45:05 +01:00 by Yevgeny Makarov · 6 comments

System Information
Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20

Blender Version
Broken: version: 3.1.0 Alpha, hash: 221b7b27fc
Worked: (newest version of Blender that worked as expected)

Short description of error

Error: Not freed memory blocks: 4, total unfreed memory 0.002075 MB
UI_block_region_set len: 64 0x7ffc8748fa18
ghash_buckets_resize len: 40 0x7ffc87416248
memory pool len: 48 0x7ffc8748fa98
BLI_Mempool Chunk len: 2024 0x7ffc90024438

Exact steps for others to reproduce the error

  • Call the "Menu Search" (F3)
  • Close Blender
**System Information** Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20 **Blender Version** Broken: version: 3.1.0 Alpha, hash: `221b7b27fc` Worked: (newest version of Blender that worked as expected) **Short description of error** ``` Error: Not freed memory blocks: 4, total unfreed memory 0.002075 MB UI_block_region_set len: 64 0x7ffc8748fa18 ghash_buckets_resize len: 40 0x7ffc87416248 memory pool len: 48 0x7ffc8748fa98 BLI_Mempool Chunk len: 2024 0x7ffc90024438 ``` **Exact steps for others to reproduce the error** - Call the "Menu Search" (F3) - Close Blender
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm

Added subscribers: @erik85, @deadpin

Added subscribers: @erik85, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed. It's a 1 time leak -- continuously opening/closing the menu multiple times will only yield 1 set of leaked objects.

It's the region->runtime.block_name_map ghash -- CC @erik85 as this was newly added in 0129178376

Confirmed. It's a 1 time leak -- continuously opening/closing the menu multiple times will only yield 1 set of leaked objects. It's the `region->runtime.block_name_map` ghash -- CC @erik85 as this was newly added in 0129178376
Erik Abrahamsson was assigned by Pratik Borhade 2021-12-01 10:27:14 +01:00

This issue was referenced by 3753a0b72b

This issue was referenced by 3753a0b72bd855fb2ed458ef2c06682b227ec6fd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93523
No description provided.